fix(annotations): annotation activity width truncation after deletion

--- a/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
+++ b/src/elements/content-sidebar/activity-feed/activity-feed/ActivityFeed.scss
@@ -96,7 +96,6 @@
     }
 
     .bcs-activity-feed-active-state {
-        width: 100%;
         padding-bottom: $bdl-grid-unit * 4;
     }
 
